Baseline test setup of OIDC Auth Code flow.